Fix a bug where thumbnails would be too small on mobile

--- a/common/app/assets/stylesheets/module/containers/_special.scss
+++ b/common/app/assets/stylesheets/module/containers/_special.scss
@@ -41,36 +41,4 @@
             display: block;
         }
     }
-
-    /**
-     * Applies to the video container only:
-     */
-
-    @include mq($to: tablet) {
-        .l-row--items-4 {
-            .item--gallery,
-            .item--video {
-                .item__title--has-icon-mobile {
-                    padding-left: 0;
-
-                    .i {
-                        display: none;
-                    }
-                }
-                .item__media-wrapper {
-                    width: 50%;
-                    float: left;
-                    @include box-sizing(border-box);
-                    @include rem((
-                        margin-top: $gs-baseline/3,
-                        padding-right: $gs-gutter/4,
-                        margin-right: $gs-gutter/4
-                    ));
-                }
-                .item__image-container {
-                    margin-top: 0;
-                }
-            }
-        }
-    }
 }
